--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/_Developers/JoseMiguelRuizMata/Level_Design
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -270,6 +270,37 @@ ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
+CSGMeshesToolProperties="\"Object\" "
+TransformInputsToolProperties="\"Object\" "
+BaseCreateFromSelectedHandleSourceProperties="\"Object\" "
+OnAcceptHandleSourcesProperties="\"Object\" "
+OnAcceptHandleSourcesPropertiesBase="\"Object\" "
+ProceduralCylinderToolProperties="\"Object\" "
+PatternToolSettings="\"Object\" "
+PatternTool_LinearSettings="\"Object\" "
+PatternTool_RotationSettings="\"Object\" "
+PatternTool_TranslationSettings="\"Object\" "
+PatternTool_ScaleSettings="\"Object\" "
+PatternTool_OutputSettings="\"Object\" "
+HoleFillToolProperties="\"Object\" "
+HoleFillStatisticsProperties="\"Object\" "
+SmoothMeshToolProperties="\"Object\" "
+IterativeSmoothProperties="\"Object\" "
+SmoothWeightMapSetProperties="\"Object\" "
+WeightMapSetProperties="\"Object\" "
+LatticeDeformerToolProperties="\"Object\" "
+RemeshMeshToolProperties="\"Object\" "
+RemeshProperties="\"Object\" "
+MeshConstraintProperties="\"Object\" "
+SimplifyMeshToolProperties="\"Object\" "
+RemoveOccludedTrianglesToolProperties="\"Object\" "
+SelfUnionMeshesToolProperties="\"Object\" "
+WeldMeshEdgesToolProperties="\"Object\" "
+RevolveToolProperties="\"Object\" "
+RevolveProperties="\"Object\" "
+DrawPolygonToolStandardProperties="\"Object\" "
+DrawPolygonToolSnapProperties="\"Object\" "
+DrawPolyPathProperties="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -588,6 +619,51 @@ PlayerStart.Physics=True
 PlayerStart.Networking=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+CSGMeshesToolProperties.Boolean=True
+CSGMeshesToolProperties.Display=True
+CSGMeshesToolProperties.Materials=True
+TransformInputsToolProperties.Transform=True
+BaseCreateFromSelectedHandleSourceProperties.OutputObject=True
+BaseCreateFromSelectedHandleSourceProperties.OnToolAccept=True
+ProceduralCylinderToolProperties.Shape=True
+ProceduralCylinderToolProperties.Positioning=True
+PatternToolSettings.Shape=True
+PatternTool_LinearSettings.LinearPattern=True
+PatternTool_RotationSettings.Rotation=True
+PatternTool_TranslationSettings.Translation=True
+PatternTool_ScaleSettings.Scale=True
+PatternTool_OutputSettings.Output=True
+HoleFillToolProperties.Options=True
+HoleFillToolActions.SelectionEdits=True
+HoleFillStatisticsProperties.HoleFillStatistics=True
+SmoothMeshToolProperties.SmoothingType=True
+IterativeSmoothProperties.IterativeSmoothingOptions=True
+SmoothWeightMapSetProperties.WeightMap=True
+LatticeDeformerToolProperties.Deformation=True
+LatticeDeformerToolProperties.Resolution=True
+LatticeDeformerToolProperties.Interpolation=True
+LatticeDeformerToolProperties.Gizmo=True
+RemeshMeshToolProperties.Remeshing=True
+RemeshMeshToolProperties.Display=True
+SimplifyMeshToolProperties.Options=True
+SimplifyMeshToolProperties.Display=True
+SimplifyMeshToolProperties.Remeshing=True
+RemoveOccludedTrianglesToolProperties.OcclusionCalculation=True
+RemoveOccludedTrianglesToolProperties.RemoveIslands=True
+RemoveOccludedTrianglesToolProperties.Action=True
+SelfUnionMeshesToolProperties.Merge=True
+SelfUnionMeshesToolProperties.Display=True
+SelfUnionMeshesToolProperties.Materials=True
+WeldMeshEdgesToolProperties.Options=True
+WeldMeshEdgesToolProperties.Statistics=True
+RevolveToolProperties.Revolve=True
+RevolveToolProperties.DrawPlane=True
+RevolveToolProperties.Snapping=True
+DrawPolygonToolStandardProperties.Polygon=True
+DrawPolygonToolStandardProperties.Extrude=True
+DrawPolygonToolSnapProperties.Snapping=True
+DrawPolyPathProperties.Path=True
+DrawPolyPathProperties.Extrude=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1646,7 +1722,8 @@ MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem2=/Game/_Developers/JoseMiguelRuizMata/Level_Design/NewMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem0=/Game/_Developers/JoseMiguelRuizMata/Level_Design/CelestialSearch_LevelDesign
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
