add camera to pawn

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -117,7 +117,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=1000)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@LAPTOP-F5RO7G48
 LastExecutedLaunchName=LAPTOP-F5RO7G48
 LastExecutedPIEPreviewDevice=
@@ -125,7 +125,6 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=1914
 NewWindowHeight=1000
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -298,6 +297,8 @@ DataValidationSettings="\"Object\" "
 GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
+CameraComponent="\"Object\" "
+BillboardComponent="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -885,11 +886,71 @@ DataValidationSettings.Validation Scenarios=True
 GameplayDebuggerUserSettings.GameplayDebugger=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
+BP_PlayerMenu_C.Pawn=True
+BP_PlayerMenu_C.Tick=True
+BP_PlayerMenu_C.Camera=True
+BP_PlayerMenu_C.Replication=True
+BP_PlayerMenu_C.Rendering=True
+BP_PlayerMenu_C.Collision=True
+BP_PlayerMenu_C.Actor=True
+BP_PlayerMenu_C.Input=True
+BP_PlayerMenu_C.HLOD=True
+BP_PlayerMenu_C.Physics=True
+BP_PlayerMenu_C.WorldPartition=True
+BP_PlayerMenu_C.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Physics=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Collision=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Replication=True
+PlayerCameraManager.HLOD=True
+PlayerCameraManager.Networking=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+BP_PlayerMenu_C.Default=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+K2Node_VariableGet.Events=True
+BP_PlayerMenu_C.TransformCommon=True
+BP_PlayerMenu_C.Networking=True
+GameNetworkManager.TransformCommon=True
+GameNetworkManager.Replication=True
+GameNetworkManager.Physics=True
+GameNetworkManager.Networking=True
+GameNetworkManager.Actor=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/UI/Blueprints/BP_Menu.BP_Menu
 OpenAssetsAtExit=/Game/UI/Widgets/BPW_MenuPrincipal.BPW_MenuPrincipal
+OpenAssetsAtExit=/Game/UI/Blueprints/BP_PlayerMenu.BP_PlayerMenu
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1968,14 +2029,15 @@ User Created=False
 Advanced=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/MainMenu
-MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem2=/Game/UI/Widgets/BPW_MenuPrincipal
-MRUItem3=/Engine/EngineSky/SM_SkySphere
-MRUItem4=/Game/UI/Blueprints/BP_Menu
-MRUItem5=/Game/UI/Blueprints/BP_GameModeMenu
-MRUItem6=/Game/UI/Fonts/Moonstar_Font
-MRUItem7=/Game/UI/Widgets/NewWidgetBlueprint
+MRUItem0=/Game/UI/Blueprints/BP_PlayerMenu
+MRUItem1=/Game/UI/MainMenu
+MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem3=/Game/UI/Widgets/BPW_MenuPrincipal
+MRUItem4=/Engine/EngineSky/SM_SkySphere
+MRUItem5=/Game/UI/Blueprints/BP_Menu
+MRUItem6=/Game/UI/Blueprints/BP_GameModeMenu
+MRUItem7=/Game/UI/Fonts/Moonstar_Font
+MRUItem8=/Game/UI/Widgets/NewWidgetBlueprint
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2102,6 +2164,7 @@ BP_Menu_C.Actor=True
 BP_Menu_C.Cooking=False
 WidgetComponent.Rendering=True
 WidgetComponent.RayTracing=True
+BP_PlayerMenu_C.Tick=False
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
@@ -2132,6 +2195,7 @@ LastLogListing=PIE
 /Game/UI/Widgets/BPW_MenuPrincipal.BPW_MenuPrincipal=0
 /Game/UI/Blueprints/BP_GameModeMenu.BP_GameModeMenu=0
 /Engine/EngineSky/SM_SkySphere.SM_SkySphere=1
+/Game/UI/Blueprints/BP_PlayerMenu.BP_PlayerMenu=1
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
