--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI/Widgets
+ContentBrowserDrawer.SelectedPaths=/Game/UI/Blueprints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -222,15 +222,15 @@ Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Fon
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
 VerticalBox="\"Object\" "
-Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.ColorAndOpacity\" "
-ContentWidget="\"Object\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
 Spacer="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.Margin\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.Margin\" "
 Font="\"Object\" \"Object.Font\" "
 WidgetComponent="\"Object\" \"Object.Rendering.BackgroundColor\" "
 MeshComponent="\"Object\" \"Object.Rendering.BackgroundColor\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Rendering.BackgroundColor\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 StaticMesh="\"Object\" "
@@ -299,6 +299,7 @@ GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 CameraComponent="\"Object\" "
 BillboardComponent="\"Object\" "
+BPW_Controls_C="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -370,7 +371,7 @@ VerticalBox.Clipping=True
 VerticalBox.Navigation=True
 VerticalBox.Localization=True
 Button.Layout=True
-Button.Appearance=True
+Button.Appearance=False
 Button.Interaction=True
 Button.Accessibility=True
 Button.Behavior=True
@@ -945,12 +946,67 @@ GameNetworkManager.Replication=True
 GameNetworkManager.Physics=True
 GameNetworkManager.Networking=True
 GameNetworkManager.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+BP_SettingsMenu_C.Tick=True
+BP_SettingsMenu_C.Replication=True
+BP_SettingsMenu_C.Rendering=True
+BP_SettingsMenu_C.Collision=True
+BP_SettingsMenu_C.Actor=True
+BP_SettingsMenu_C.Input=True
+BP_SettingsMenu_C.HLOD=True
+BP_SettingsMenu_C.Physics=True
+BP_SettingsMenu_C.WorldPartition=True
+BP_SettingsMenu_C.Events=True
+BPW_Controls_C.Appearance=True
+BPW_Controls_C.Designer=True
+BPW_Controls_C.Input=True
+BPW_Controls_C.Interaction=True
+BPW_Controls_C.Performance=True
+BPW_Controls_C.Layout=True
+BPW_Controls_C.Behavior=True
+BPW_Controls_C.Render Transform=True
+BPW_Controls_C.Localization=True
+BPW_Controls_C.Accessibility=True
+BPW_Controls_C.Clipping=True
+BPW_Controls_C.Navigation=True
+K2Node_VariableSet.Events=True
+BP_CreditsMenu_C.Tick=True
+BP_CreditsMenu_C.Replication=True
+BP_CreditsMenu_C.Rendering=True
+BP_CreditsMenu_C.Collision=True
+BP_CreditsMenu_C.Actor=True
+BP_CreditsMenu_C.Input=True
+BP_CreditsMenu_C.HLOD=True
+BP_CreditsMenu_C.Physics=True
+BP_CreditsMenu_C.WorldPartition=True
+BP_CreditsMenu_C.Events=True
+BP_ControlsMenu_C.Tick=True
+BP_ControlsMenu_C.Replication=True
+BP_ControlsMenu_C.Rendering=True
+BP_ControlsMenu_C.Collision=True
+BP_ControlsMenu_C.Actor=True
+BP_ControlsMenu_C.Input=True
+BP_ControlsMenu_C.HLOD=True
+BP_ControlsMenu_C.Physics=True
+BP_ControlsMenu_C.WorldPartition=True
+BP_ControlsMenu_C.Events=True
+BP_ControlsMenu_C.TransformCommon=True
+BP_ControlsMenu_C.Networking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/Blueprints/BP_Menu.BP_Menu
-OpenAssetsAtExit=/Game/UI/Widgets/BPW_MenuPrincipal.BPW_MenuPrincipal
+OpenAssetsAtExit=/Game/UI/Widgets/BPW_Controls.BPW_Controls
+OpenAssetsAtExit=/Game/UI/Blueprints/BP_CreditsMenu.BP_CreditsMenu
 OpenAssetsAtExit=/Game/UI/Blueprints/BP_PlayerMenu.BP_PlayerMenu
+OpenAssetsAtExit=/Game/UI/Widgets/BPW_MenuPrincipal.BPW_MenuPrincipal
+OpenAssetsAtExit=/Game/UI/Blueprints/BP_Menu.BP_Menu
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2021,23 +2077,28 @@ Input=False
 Lists=False
 Misc=False
 Optimization=False
-Panel=False
+Panel=True
 Primitive=False
-Special Effects=False
+Special Effects=True
 Synth=False
 User Created=False
 Advanced=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Blueprints/BP_PlayerMenu
-MRUItem1=/Game/UI/MainMenu
-MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem3=/Game/UI/Widgets/BPW_MenuPrincipal
-MRUItem4=/Engine/EngineSky/SM_SkySphere
+MRUItem0=/Game/UI/Blueprints/BP_ControlsMenu
+MRUItem1=/Game/UI/Widgets/BPW_Controls
+MRUItem2=/Game/UI/Blueprints/BP_CreditsMenu
+MRUItem3=/Game/UI/Blueprints/BP_PlayerMenu
+MRUItem4=/Game/UI/Widgets/BPW_MenuPrincipal
 MRUItem5=/Game/UI/Blueprints/BP_Menu
-MRUItem6=/Game/UI/Blueprints/BP_GameModeMenu
-MRUItem7=/Game/UI/Fonts/Moonstar_Font
-MRUItem8=/Game/UI/Widgets/NewWidgetBlueprint
+MRUItem6=/Game/UI/Blueprints/BP_SettingsMenu
+MRUItem7=/Game/UI/Widgets/BPW_Credits
+MRUItem8=/Game/UI/MainMenu
+MRUItem9=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem10=/Engine/EngineSky/SM_SkySphere
+MRUItem11=/Game/UI/Blueprints/BP_GameModeMenu
+MRUItem12=/Game/UI/Fonts/Moonstar_Font
+MRUItem13=/Game/UI/Widgets/NewWidgetBlueprint
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2167,11 +2228,12 @@ WidgetComponent.RayTracing=True
 BP_PlayerMenu_C.Tick=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/UI/Blueprints/BP_ControlsMenu.BP_ControlsMenu;
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.SkyAtmosphere;/Engine/Transient.ActorFactorySkyAtmosphere_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/UI/Blueprints/BP_Menu.BP_Menu;
@@ -2196,6 +2258,8 @@ LastLogListing=PIE
 /Game/UI/Blueprints/BP_GameModeMenu.BP_GameModeMenu=0
 /Engine/EngineSky/SM_SkySphere.SM_SkySphere=1
 /Game/UI/Blueprints/BP_PlayerMenu.BP_PlayerMenu=1
+/Game/UI/Blueprints/BP_SettingsMenu.BP_SettingsMenu=0
+/Game/UI/Widgets/BPW_Credits.BPW_Credits=0
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
