add credits menu

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -217,10 +217,10 @@ EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 BPW_MenuPrincipal_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.Margin\" "
-Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.Margin\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" "
+PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
 VerticalBox="\"Object\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
@@ -300,6 +300,7 @@ LogVisualizerSettings="\"Object\" "
 CameraComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 BPW_Controls_C="\"Object\" "
+BPW_Credits_C="\"Object\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -371,7 +372,7 @@ VerticalBox.Clipping=True
 VerticalBox.Navigation=True
 VerticalBox.Localization=True
 Button.Layout=True
-Button.Appearance=False
+Button.Appearance=True
 Button.Interaction=True
 Button.Accessibility=True
 Button.Behavior=True
@@ -999,14 +1000,33 @@ BP_ControlsMenu_C.WorldPartition=True
 BP_ControlsMenu_C.Events=True
 BP_ControlsMenu_C.TransformCommon=True
 BP_ControlsMenu_C.Networking=True
+BPW_Credits_C.Appearance=True
+BPW_Credits_C.Designer=True
+BPW_Credits_C.Input=True
+BPW_Credits_C.Interaction=True
+BPW_Credits_C.Performance=True
+BPW_Credits_C.Layout=True
+BPW_Credits_C.Behavior=True
+BPW_Credits_C.Render Transform=True
+BPW_Credits_C.Localization=True
+BPW_Credits_C.Accessibility=True
+BPW_Credits_C.Clipping=True
+BPW_Credits_C.Navigation=True
+BP_CreditsMenu_C.TransformCommon=True
+BP_CreditsMenu_C.Networking=True
+BPW_MenuPrincipal_C.Layout=True
+EdGraph.Graph=True
+K2Node_CallFunction.Graph=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/UI/Widgets/BPW_Controls.BPW_Controls
 OpenAssetsAtExit=/Game/UI/Blueprints/BP_CreditsMenu.BP_CreditsMenu
 OpenAssetsAtExit=/Game/UI/Blueprints/BP_PlayerMenu.BP_PlayerMenu
+OpenAssetsAtExit=/Game/UI/Blueprints/BP_ControlsMenu.BP_ControlsMenu
 OpenAssetsAtExit=/Game/UI/Widgets/BPW_MenuPrincipal.BPW_MenuPrincipal
 OpenAssetsAtExit=/Game/UI/Blueprints/BP_Menu.BP_Menu
+OpenAssetsAtExit=/Game/UI/Widgets/BPW_Credits.BPW_Credits
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2085,14 +2105,14 @@ User Created=False
 Advanced=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Blueprints/BP_ControlsMenu
-MRUItem1=/Game/UI/Widgets/BPW_Controls
-MRUItem2=/Game/UI/Blueprints/BP_CreditsMenu
-MRUItem3=/Game/UI/Blueprints/BP_PlayerMenu
-MRUItem4=/Game/UI/Widgets/BPW_MenuPrincipal
-MRUItem5=/Game/UI/Blueprints/BP_Menu
-MRUItem6=/Game/UI/Blueprints/BP_SettingsMenu
-MRUItem7=/Game/UI/Widgets/BPW_Credits
+MRUItem0=/Game/UI/Widgets/BPW_Credits
+MRUItem1=/Game/UI/Blueprints/BP_ControlsMenu
+MRUItem2=/Game/UI/Widgets/BPW_Controls
+MRUItem3=/Game/UI/Blueprints/BP_CreditsMenu
+MRUItem4=/Game/UI/Blueprints/BP_PlayerMenu
+MRUItem5=/Game/UI/Widgets/BPW_MenuPrincipal
+MRUItem6=/Game/UI/Blueprints/BP_Menu
+MRUItem7=/Game/UI/Blueprints/BP_SettingsMenu
 MRUItem8=/Game/UI/MainMenu
 MRUItem9=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem10=/Engine/EngineSky/SM_SkySphere
@@ -2228,6 +2248,7 @@ WidgetComponent.RayTracing=True
 BP_PlayerMenu_C.Tick=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/UI/Blueprints/BP_CreditsMenu.BP_CreditsMenu;
 RecentlyPlaced=/Game/UI/Blueprints/BP_ControlsMenu.BP_ControlsMenu;
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
