add main menu all functional

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/UI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -217,10 +217,10 @@ EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 BPW_MenuPrincipal_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Appearance.Image\" \"Object.Appearance.Image.TintColor\" "
+Visual="\"Object\" \"Object.Appearance.Image\" \"Object.Appearance.Image.TintColor\" "
 CanvasPanel="\"Object\" "
-PanelWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object\" "
 VerticalBox="\"Object\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.ColorAndOpacity\" "
@@ -301,6 +301,11 @@ CameraComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 BPW_Controls_C="\"Object\" "
 BPW_Credits_C="\"Object\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Throbber="\"Object\" \"Object.Appearance.Image\" \"Object.Appearance.Image.TintColor\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+CircularThrobber="\"Object\" \"Object.Appearance.Image\" \"Object.Appearance.Image.TintColor\" "
 
 [DetailCategories]
 WorldSettings.GameMode=True
@@ -1017,6 +1022,41 @@ BP_CreditsMenu_C.Networking=True
 BPW_MenuPrincipal_C.Layout=True
 EdGraph.Graph=True
 K2Node_CallFunction.Graph=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Throbber.Layout=True
+Throbber.Appearance=True
+Throbber.Accessibility=True
+Throbber.Behavior=True
+Throbber.Render Transform=True
+Throbber.Performance=True
+Throbber.Clipping=True
+Throbber.Navigation=True
+Throbber.Localization=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Interchange =True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+CircularThrobber.Layout=True
+CircularThrobber.Appearance=True
+CircularThrobber.Accessibility=True
+CircularThrobber.Behavior=True
+CircularThrobber.Render Transform=True
+CircularThrobber.Performance=True
+CircularThrobber.Clipping=True
+CircularThrobber.Navigation=True
+CircularThrobber.Localization=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1027,6 +1067,7 @@ OpenAssetsAtExit=/Game/UI/Blueprints/BP_ControlsMenu.BP_ControlsMenu
 OpenAssetsAtExit=/Game/UI/Widgets/BPW_MenuPrincipal.BPW_MenuPrincipal
 OpenAssetsAtExit=/Game/UI/Blueprints/BP_Menu.BP_Menu
 OpenAssetsAtExit=/Game/UI/Widgets/BPW_Credits.BPW_Credits
+OpenAssetsAtExit=/Game/UI/Widgets/BPW_Loading.BPW_Loading
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2105,20 +2146,22 @@ User Created=False
 Advanced=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/Widgets/BPW_Credits
-MRUItem1=/Game/UI/Blueprints/BP_ControlsMenu
-MRUItem2=/Game/UI/Widgets/BPW_Controls
-MRUItem3=/Game/UI/Blueprints/BP_CreditsMenu
-MRUItem4=/Game/UI/Blueprints/BP_PlayerMenu
-MRUItem5=/Game/UI/Widgets/BPW_MenuPrincipal
-MRUItem6=/Game/UI/Blueprints/BP_Menu
-MRUItem7=/Game/UI/Blueprints/BP_SettingsMenu
-MRUItem8=/Game/UI/MainMenu
-MRUItem9=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem10=/Engine/EngineSky/SM_SkySphere
-MRUItem11=/Game/UI/Blueprints/BP_GameModeMenu
-MRUItem12=/Game/UI/Fonts/Moonstar_Font
-MRUItem13=/Game/UI/Widgets/NewWidgetBlueprint
+MRUItem0=/Game/UI/Stars-Background-PNG_tapy3p
+MRUItem1=/Game/UI/Widgets/BPW_Loading
+MRUItem2=/Game/UI/Widgets/BPW_Credits
+MRUItem3=/Game/UI/Blueprints/BP_ControlsMenu
+MRUItem4=/Game/UI/Widgets/BPW_Controls
+MRUItem5=/Game/UI/Blueprints/BP_CreditsMenu
+MRUItem6=/Game/UI/Blueprints/BP_PlayerMenu
+MRUItem7=/Game/UI/Widgets/BPW_MenuPrincipal
+MRUItem8=/Game/UI/Blueprints/BP_Menu
+MRUItem9=/Game/UI/Blueprints/BP_SettingsMenu
+MRUItem10=/Game/UI/MainMenu
+MRUItem11=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem12=/Engine/EngineSky/SM_SkySphere
+MRUItem13=/Game/UI/Blueprints/BP_GameModeMenu
+MRUItem14=/Game/UI/Fonts/Moonstar_Font
+MRUItem15=/Game/UI/Widgets/NewWidgetBlueprint
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2281,6 +2324,7 @@ LastLogListing=PIE
 /Game/UI/Blueprints/BP_PlayerMenu.BP_PlayerMenu=1
 /Game/UI/Blueprints/BP_SettingsMenu.BP_SettingsMenu=0
 /Game/UI/Widgets/BPW_Credits.BPW_Credits=0
+/Game/UI/Stars-Background-PNG_tapy3p.Stars-Background-PNG_tapy3p=0
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
