add all credits names

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -117,7 +117,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=1000)
 LastExecutedLaunchDevice=Windows@LAPTOP-F5RO7G48
 LastExecutedLaunchName=LAPTOP-F5RO7G48
 LastExecutedPIEPreviewDevice=
@@ -170,7 +170,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/UI
+ContentBrowserDrawer.SelectedPaths=/Game/UI/Widgets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -217,8 +217,8 @@ EdGraphNode_Comment="\"Object\" "
 EdGraphNode="\"Object\" "
 BPW_MenuPrincipal_C="\"Object\" "
 UserWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.Image\" \"Object.Appearance.Image.TintColor\" "
-Visual="\"Object\" \"Object.Appearance.Image\" \"Object.Appearance.Image.TintColor\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.Margin\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.Margin\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
 VerticalBox="\"Object\" "
@@ -2312,6 +2312,10 @@ Theme0Color2=(R=44.341492,G=0.640858,B=1.000000,A=1.000000)
 Theme0Label2=
 Theme0Color3=(R=181.548126,G=1.000000,B=1.000000,A=1.000000)
 Theme0Label3=
+Theme0Color4=(R=181.548126,G=1.000000,B=1.000000,A=1.000000)
+Theme0Label4=
+Theme0Color5=(R=181.547943,G=1.000000,B=0.140625,A=1.000000)
+Theme0Label5=
 
 [MessageLog]
 LastLogListing=PIE
