Door Logic and Star Spawn

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -155,6 +155,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,
+TargetPoint=StaticMeshActor.Physics.ConstraintsGroup,
+BP_Spawner_C=StaticMeshActor.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -528,9 +531,62 @@ TriggerBox.Actor=True
 StaticMeshActor.LOD=True
 StaticMeshActor.TextureStreaming=True
 K2Node_Timeline.GraphNodeDetail=True
+StarPrimitive_C.TransformCommon=True
+StarPrimitive_C.Animation=True
+StarPrimitive_C.Mesh=True
+StarPrimitive_C.Tick=True
+StarPrimitive_C.ComponentTick=True
+StarPrimitive_C.Clothing=True
+StarPrimitive_C.LeaderPoseComponent=True
+StarPrimitive_C.Physics=True
+StarPrimitive_C.Collision=True
+StarPrimitive_C.Lighting=True
+StarPrimitive_C.AnimationRig=True
+StarPrimitive_C.Deformer=True
+StarPrimitive_C.SkinWeights=True
+StarPrimitive_C.HLOD=True
+StarPrimitive_C.Rendering=True
+StarPrimitive_C.Mobile=True
+StarPrimitive_C.Navigation=True
+StarPrimitive_C.RayTracing=True
+StarPrimitive_C.VirtualTexture=True
+StarPrimitive_C.Tags=True
+StarPrimitive_C.AssetUserData=True
+StarPrimitive_C.Replication=True
+StarPrimitive_C.ComponentReplication=True
+StarPrimitive_C.Activation=True
+StarPrimitive_C.Variable=True
+StarPrimitive_C.Cooking=True
+StarPrimitive_C.Character Movement (General Settings)=True
+StarPrimitive_C.Character Movement: Walking=True
+StarPrimitive_C.Character Movement: Jumping / Falling=True
+StarPrimitive_C.Character Movement (Networking)=True
+StarPrimitive_C.Character Movement: Swimming=True
+StarPrimitive_C.Character Movement: Flying=True
+StarPrimitive_C.Character Movement: Custom Movement=True
+StarPrimitive_C.Character Movement (Rotation Settings)=True
+StarPrimitive_C.Character Movement: Physics Interaction=True
+StarPrimitive_C.Character Movement=True
+StarPrimitive_C.Character Movement: Avoidance=True
+StarPrimitive_C.RootMotion=True
+StarPrimitive_C.Character Movement: NavMesh Movement=True
+StarPrimitive_C.NavMovement=True
+StarPrimitive_C.Velocity=True
+StarPrimitive_C.PlanarMovement=True
+StarPrimitive_C.MovementComponent=True
+StarPrimitive_C.Shape=True
+StarPrimitive_C.Character=True
+StarPrimitive_C.Camera=True
+StarPrimitive_C.Pawn=True
+StarPrimitive_C.Actor=True
+StarPrimitive_C.Input=True
+StarPrimitive_C.WorldPartition=True
+StarPrimitive_C.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Diablo/BP_Spawner.BP_Spawner
+OpenAssetsAtExit=/Game/Diablo/WaveLevel.WaveLevel:PersistentLevel.WaveLevel
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -547,7 +603,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1284.800 Y=724.800
+WindowSize=X=1286.400 Y=726.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1587,23 +1643,26 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/Control
 
 [MRU]
 MRUItem0=/Game/Diablo/WaveLevel
-MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem2=/Game/Diablo/WavesLevel
+MRUItem1=/Game/Diablo/Untitled
+MRUItem2=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem3=/Game/Diablo/WavesLevel
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Diablo/BP_Spawner
-MRUItem1=/Game/Diablo/CubeEnemy
-MRUItem2=/Game/Diablo/WaveLevel
-MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem4=/Game/Diablo/WavesLevel
+MRUItem1=/Game/Diablo/WaveLevel
+MRUItem2=/Game/Diablo/StarPrimitive
+MRUItem3=/Game/Diablo/Untitled
+MRUItem4=/Game/Diablo/CubeEnemy
+MRUItem5=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem6=/Game/Diablo/WavesLevel
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/NavigationSystem.NavModifierVolume;/Engine/Transient.ActorFactoryBoxVolume_1
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Diablo/BP_Spawner.BP_Spawner;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1612,6 +1671,7 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 /Game/Diablo/WaveLevel.WaveLevel:PersistentLevel.WaveLevel=0
 /Game/Diablo/CubeEnemy.CubeEnemy=0
 /Game/Diablo/BP_Spawner.BP_Spawner=0
+/Game/Diablo/StarPrimitive.StarPrimitive=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1658,7 +1718,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [SuppressableDialogs]
 DeleteComponentInUse_Warning=False
